changed functions to suspend

--- a/coroutines-codelab/build.gradle
+++ b/coroutines-codelab/build.gradle
@@ -64,6 +64,8 @@ buildscript {
                 "com.google.code.gson:gson:$gson_version",
                 "com.squareup.retrofit2:converter-gson:$retrofit_gson_version",
                 "com.squareup.retrofit2:retrofit:$retrofit_version",
+
+                "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
         ]
 
         librariesKapt = [
